js/js.translator/testData/incremental/invalidationWithPL/removeInlineFunction/lib1/l1a.0.kt
inline fun foo() = -1
